<resources>
    <string name="app_name">DailyDemo</string>
    <string name="active_call_buttons">Call</string>
    <string name="call_button">Join</string>
    <string name="hangup_button">Leave</string>
    <string name="inputs">Inputs</string>
    <string name="publish">Publishing</string>
    <string name="publish_camera">Publish Camera</string>
    <string name="publish_mic">Publish Mic</string>
    <string name="input_camera">Input Camera</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="input_mic">Input Mic</string>
    <string name="local_camera">Local Camera</string>
    <string name="audio_route">Audio</string>
    <string name="no_one_else_in_meeting">No one else is in the meeting</string>
    <string name="join_meeting_instructions">Enter the room URL and click Join!</string>
    <string name="joining">Joining…</string>
    <string name="amount_of_participants_at_meeting">There is %d other participants on this meeting</string>

    <string name="service_notification_title">Daily call in progress</string>
    <string name="service_notification_message">Tap to return to the call.</string>

    <string name="more_options">More Options</string>
    <string name="call_option_change_video_processor">Video processor…</string>
    <string name="call_option_change_video_processor_title">Video processor</string>
    <string name="call_option_change_remote_video">Remote video…</string>
    <string name="call_option_change_remote_video_title">Remote video</string>
    <string name="call_option_start_screen_share">Start screen share</string>
    <string name="call_option_stop_screen_share">Stop screen share</string>
    <string name="custom_audio_track">Custom audio track…</string>
    <string name="me">Me</string>
    <string name="username_with_camera">%s (camera)</string>
    <string name="username_with_screen_share">%s (screen)</string>
    <string name="username_with_custom_track">%s (custom: %s)</string>
    <string name="remote_video_hide">Hide</string>
    <string name="remote_video_active_speaker">Active Speaker</string>

    <string name="call_option_developer_options">Developer options…</string>
    <string name="call_option_developer_options_title">Developer options</string>

    <string name="close_dialog">Close</string>

    <string name="room_url_prompt">Room URL</string>
    <string name="meeting_token_prompt">Meeting token (optional)</string>
    <string name="username_prompt">Username (optional)</string>

    <string name="chat_send_hint">Send a message…</string>
    <string name="chat_send_button">Send</string>
    <string name="call_option_chat">Chat…</string>
</resources>
