<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/call_option_change_video_processor"
        android:title="@string/call_option_change_video_processor" />

    <item
        android:id="@+id/call_option_change_remote_participant"
        android:title="@string/call_option_change_remote_video" />

    <item
        android:id="@+id/call_option_developer_options"
        android:title="@string/call_option_developer_options" />

    <item
        android:id="@+id/call_option_chat"
        android:title="@string/call_option_chat" />

    <item
        android:id="@+id/call_option_start_screen_share"
        android:title="@string/call_option_start_screen_share" />

    <item
        android:id="@+id/call_option_stop_screen_share"
        android:title="@string/call_option_stop_screen_share" />

    <item
        android:id="@+id/custom_audio_track"
        android:title="@string/custom_audio_track" />

</menu>
